<resources>
    <string name="app_name">Wow estadistica</string>
    <string name="titulo">Wow Estadistica</string>
    <string name="boton">Inicio</string>
    <string name="logo">logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analicemos_datos_estad_sticos1">Analicemos datos estadísticos</string>
    <string name="en_esta_secci_n_hallar_s_una_serie_de_comceptos_estadisticos_para_recordar">En esta sección hallarás una serie de comceptos estadisticos para recordar.</string>
    <string name="actividad_de_exploraci_n">Actividad de exploración:</string>
    <string name="la_presente_unidad_se_divide_en_tres_momentos_que_son">La presente unidad se divide en tres momentos que son:</string>
    <string name="presentaci_n1">Presentación:</string>
    <string name="actividad_de_pr_ctica">Actividad de práctica:</string>
    <string name="en_esta_secci_n_deber_s_observar_algunos_gr_ficos_y_seleccionar_la_respuesta_correcta">En esta sección deberás observar algunos gráficos y seleccionar la respuesta correcta.</string>
    <string name="actividad_de_aplicaci_n">Actividad de aplicación:</string>
    <string name="en_esta_secci_n_se_dan_dos_puntos_para_resolver_el_primero_es_de_selecci_n_de_la_respuesta_el_segundo_es_de_un_an_lisis_de_table_de_frecuencia_y_sus_preguntas_son_de_selecci_n_m_ltiple_nica_respuesta">En esta sección se dan dos puntos para resolver. El primero es de selección de la respuesta. El segundo es de un análisis de tabla de frecuencia y sus preguntas son de selección múltiple única respuesta.</string>
    <string name="aprendizaje_esperado2">Aprendizaje esperado:</string>
    <string name="recuerda_y_reconoce_los_conceptos_estad_sticos">-Recuerda y reconoce los conceptos estadísticos.</string>
    <string name="diferencia_las_variables_cualitativas_y_cuantitativas">-Diferencia las variables cualitativas y cuantitativas.</string>
    <string name="analisa_tablas_de_frecuencias">-Analisa tablas de frecuencias.</string>
    <string name="analicemos_datos_estad_sticos">Analicemos datos estadísticos</string>
    <string name="variables_continuas">Variables continuas</string>
    <string name="variables_discretas">Variables discretas</string>
    <string name="variables_cuantitativas">Variables cuantitativas</string>
    <string name="variables_cualitativas">Variables cualitativas</string>
    <string name="variables">Variables</string>
    <string name="concepto_estad_stica">Concepto estadística</string>
    <string name="recordemos_agunos_conceptos_estad_sticos">Recordemos agunos conceptos estadísticos</string>
    <string name="actividades_de_exploraci_n">Actividad de exploración</string>
    <string name="poblaci_n">Población</string>
    <string name="espacio_muestral">Espacio muestral</string>
    <string name="frecuencia">Frecuencia</string>
    <string name="frecuencia_absoluta">Frecuencia absoluta</string>
    <string name="frecuencia_relativa">Frecuencia relativa</string>
    <string name="dato">Dato</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="diagrama">Diagrama</string>
    <string name="hallando_las_tres_m1">Hallando las tres M</string>
    <string name="presentaci_n2">Presentación:</string>
    <string name="la_siguiente_unidad_de_divide_en_tres_secciones_que_son">La siguiente unidad de divide en tres secciones que son:</string>
    <string name="actividad_de_exploraci_n_en_esta_unidad_recordar_s_los_tres_conceptos_de_las_tres_m_media_mediana_moda">Actividad de exploración: en esta unidad recordarás los tres conceptos de las tres M (Media, Mediana, Moda).</string>
    <string name="actividad_de_aplicaci_n_en_esta_secci_n_se_debe_responder_cuales_son_los_datos_que_corresponden_a_las_tres_m_del_caso_presentado_en_la_actividad_de_practica">Actividad de aplicación: en esta sección se debe responder ¿ cuales son los datos que corresponden a las tres M del caso presentado en la actividad de practica..</string>
    <string name="aprendizaje_esperado">Aprendizaje esperado:</string>
    <string name="recuerda_y_reconoce_el_concepto_de_las_tres_m_media_mediana_moda">-Recuerda y reconoce el concepto de las tres M (Media, Mediana, Moda).</string>
    <string name="halla_las_tres_m_media_mediana_moda_de_una_situaci_n_presentada">-Halla las tres M (Media, Mediana, Moda) de una situación presentada.</string>
    <string name="hallando_las_tres_m2">Hallando las tres M</string>
    <string name="actividad_de_exploraci_n1">Actividad de exploración</string>
    <string name="observa_y_lee_atentamente_los_siguientes_conceptos">Observa y lee atentamente los siguientes conceptos</string>
    <string name="media">Media</string>
    <string name="mediana1">Mediana</string>
    <string name="moda1">Moda</string>
    <string name="hallando_las_tres_m">Hallando las tres M</string>
    <string name="en_esta_actividad_deber_s_tener_en_cuenta_el_caso_de_la_actividad_de_pr_ctica_para_seleccionar_la_respuesta_correcta_de_la_siguiente_actividad">En esta actividad deberás tener en cuenta el caso de la actividad de práctica para seleccionar la respuesta correcta de la siguiente actividad.</string>
    <string name="actividad_de_aplicaci_n2">Actividad de aplicación</string>
    <string name="media1">Media</string>
    <string name="mediana">Mediana</string>
    <string name="moda">Moda</string>
    <string name="_53">53</string>
    <string name="_49">49</string>
    <string name="_45_67">45,67</string>
    <string name="_46_5">46,5</string>
    <string name="_60">60</string>
    <string name="interpretemos_gr_ficos_estad_sticos1">Interpretemos Gráficos Estadísticos</string>
    <string name="presentaci_n3">Presentación:</string>
    <string name="la_presente_unidad_se_divide_en_trese_secciones_que_son">La presente unidad se divide en trese secciones que son:</string>
    <string name="actividad_de_exploraci_n_en_esta_secci_n_hallar_s_un_comcepto_sobre_las_gr_ficas_estadisticas_al_igual_que_los_diferentes_gr_ficos_estad_sticos">Actividad de exploración: en esta sección hallarás un comcepto sobre las gráficas estadisticas, al igual que los diferentes gráficos estadísticos.</string>
    <string name="actividad_de_pr_ctica_en_esta_secci_n_hallar_s_cuatro_preguntas_a_la_cual_deber_s_seleccionar_la_respuesta_correcta">Actividad de práctica: en esta sección hallarás cuatro preguntas a la cual deberás seleccionar la respuesta correcta.</string>
    <string name="actividad_de_aplicaci_n_en_esta_secci_n_se_presenta_un_caso_con_tablas_de_frecuencia_se_debe_completar_la_tabla_y_seleccionar_la_respuesta_correcta_de_los_items_del_punto_dos">Actividad de aplicación: en esta sección se presenta un caso, con tablas de frecuencia, se debe completar la tabla y seleccionar la respuesta correcta de los items del punto dos.</string>
    <string name="aprendizaje_esperado3">Aprendizaje esperado</string>
    <string name="recuerda_y_reconoce_el_concepto_de_las_gr_ficas_estad_sticas">-Recuerda y reconoce el concepto de las gráficas estadísticas.</string>
    <string name="reconoce_los_datos_que_se_registran_en_las_tablas_de_frecuencia">-Reconoce los datos que se registran en las tablas de frecuencia.</string>
    <string name="analiza_gr_ficos_estad_sticos">-Analiza gráficos estadísticos.</string>
    <string name="interpretemos_gr_ficos_estad_sticos2">Interpretemos Gráficos Estadísticos</string>
    <string name="actividad_de_exploraci_n4">Actividad de exploración</string>
    <string name="recordemos_el_concepto_de">Recordemos el concepto de:</string>
    <string name="gr_ficos_estad_sticos">Gráficos Estadísticos</string>
    <string name="recordemos_y_observemos_las_diferentes_gr_ficas_estad_sticas">Recordemos y observemos las diferentes gràficas estadìsticas.</string>
    <string name="tabla_de_frecuencia">Tabla de frecuencia</string>
    <string name="diagrama_barra_horizantal">Diagrama barra horizantal</string>
    <string name="diagrama_barra_vertical">Diagrama barra vertical</string>
    <string name="diagrama_circular">Diagrama circular</string>
    <string name="pictogramas">Pictogramas</string>
    <string name="interpretemos_gr_ficos_estad_sticos">Interpretemos Gráficos Estadísticos</string>
    <string name="actividad_de_aplicaci_n5">Actividad de Aplicación</string>
    <string name="lee_atentamente_la_siguiente_situaci_n_observa_la_tabla_de_frecuencia_y_selecciona_la_respuesta_correcta_a_cada_pregunta">Lee atentamente la siguiente situación, observa la tabla de frecuencia y selecciona la respuesta correcta a cada pregunta.</string>
    <string name="un_odont_logo_realiz_un_estudio_sobre_la_aparici_n_de_caries_en_los_dientes_de_los_jovenes_entre_12_y_18_a_os_de_edad_para_hacerlo_examin_a_50_jovenes_con_el_fin_de_determinar_el_n_mero_de_caries_que_presentaba_cada_uno_de_ellos_en_el_estudio_obtuvo_el_siguiente_resultado">Un odontólogo realizó un estudio sobre la aparición de caries en los dientes de los jovenes entre 12 y 18 años de edad. Para hacerlo examinó a 50 jovenes con el fin de determinar el número de caries que presentaba cada uno de ellos. En el estudio obtuvo el siguiente resultado.</string>
    <string name="tabla">tabla</string>
    <string name="introducci_n">Introducción</string>
    <string name="mejorando_mis_conocimientos">Mejorando Mis Conocimientos</string>
    <string name="presentaci_n">Presentación:</string>
    <string name="la_siguiente_unidad_de_aprendizaje_se_divide_en_dos_momentos_que_son">La siguiente unidad de aprendizaje se divide en dos momentos que son:</string>
    <string name="actividad_de_reconocimiento_de_saberes_previos_en_esta_secci_n_hallar_s_conceptos_trabajados_en_las_tres_unidades_los_cuales_deber_s_seleccionar_la_respuesta_correcta">Actividad de reconocimiento de saberes previos: en esta sección hallarás conceptos trabajados en las tres unidades los cuales deberás seleccionar la respuesta correcta.</string>
    <string name="actividad_evaluativa_en_esta_secci_n_se_presentan_tres_puntos_relacionados_con_cada_una_de_las_tem_ticas_observadas_en_la_unidad_se_debe_hacer_analisis_de_datos_gr_ficas_hallar_las_tres_m_a_trav_s_de_selecci_n_m_ltiple_unica_respuesta">Actividad Evaluativa: En esta sección se presentan tres puntos relacionados con cada una de las temáticas observadas en la unidad, se debe hacer análisis de datos, gráficas, hallar las tres M a través de selección múltiple única respuesta.</string>
    <string name="aprendizaje_esperado1">Aprendizaje Esperado</string>
    <string name="identifica_los_conceptos_trabajados_en_las_tres_unidades">-Identifica los conceptos trabajados en las tres unidades.</string>
    <string name="analisa_e_interpreta_datos_y_gr_ficos_estad_sticos">-Analisa e interpreta datos y gráficos estadísticos.</string>
    <string name="halla_las_tres_m_media_mediana_moda_de_casos_o_situaciones_presentadas">-Halla las tres M (Media, Mediana, Moda) de casos o situaciones presentadas.</string>
    <string name="objetivos">Objetivos</string>
    <string name="_1_desarrollar_habilidades_y_destrezas_en_los_estudiantes_apartir_del_analisi_e_interpretacii_n_de_datos_y_gr_ficos_estadisticos">1. Desarrollar habilidades y destrezas en los estudiantes, apartir del analisi e interpretaciión de datos y gráficos estadisticos.</string>
    <string name="_2_alcanzar_nuevas_competencias_relacionadas_con_la_comunicaci_n_la_creatividad_y_la_creaci_n_de_nuevos_conocimientos">2. Alcanzar nuevas competencias relacionadas con la comunicación, la creatividad y la creación de nuevos conocimientos.</string>
    <string name="_3_emitir_conclusiones_finales_a_trav_s_de_hip_tesis_hechas_del_d_a_a_d_a_a_trav_s_de_los_modelos_estad_sticos">3. Emitir conclusiones finales a través de hipótesis hechas del día a día, a través de los modelos estadísticos.</string>
    <string name="unidades_de_aprendizaje">Unidades de aprendizaje</string>
    <string name="_1_analicemos_datos_estad_sticos">1. Analicemos datos estadísticos.</string>
</resources>