<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Interpretemos1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView37"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/interpretemos" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:cardBackgroundColor="#3AEFCA">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/interpretemos_gr_ficos_estad_sticos"
                    android:textAlignment="center"
                    android:textColor="#FFFCFC"
                    android:textSize="21sp" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/presentaci_n"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/la_presente_unidad_se_divide_en_trese_secciones_que_son"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/actividad_de_exploraci_n_en_esta_secci_n_hallar_s_un_comcepto_sobre_las_gr_ficas_estadisticas_al_igual_que_los_diferentes_gr_ficos_estad_sticos"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/actividad_de_pr_ctica_en_esta_secci_n_hallar_s_cuatro_preguntas_a_la_cual_deber_s_seleccionar_la_respuesta_correcta"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/actividad_de_aplicaci_n_en_esta_secci_n_se_presenta_un_caso_con_tablas_de_frecuencia_se_debe_completar_la_tabla_y_seleccionar_la_respuesta_correcta_de_los_items_del_punto_dos"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/aprendizaje_esperado3"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recuerda_y_reconoce_el_concepto_de_las_gr_ficas_estad_sticas"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reconoce_los_datos_que_se_registran_en_las_tablas_de_frecuencia"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/analiza_gr_ficos_estad_sticos"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivArrowLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:rotation="180"
                    android:src="@drawable/flecha" />

                <ImageView
                    android:id="@+id/btnMenus"
                    android:layout_width="112dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center"
                    android:src="@drawable/menu" />

                <ImageView
                    android:id="@+id/ivArrowRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/flecha" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>