<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HallandoM1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/hallando" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:cardBackgroundColor="#3AEFCA">

                <TextView
                    android:id="@+id/textView94"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/hallando_las_tres_m"
                    android:textColor="#FFFFFF"
                    android:textSize="21sp" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView95"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/presentaci_n"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView96"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/la_siguiente_unidad_de_divide_en_tres_secciones_que_son"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView97"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/actividad_de_exploraci_n_en_esta_unidad_recordar_s_los_tres_conceptos_de_las_tres_m_media_mediana_moda"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView98"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Actividad de práctica: en esta sección se presenta un caso, con una información para organizar y resolver. seguidamente dar respuesta correcta a las preguntas."
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView99"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/actividad_de_aplicaci_n_en_esta_secci_n_se_debe_responder_cuales_son_los_datos_que_corresponden_a_las_tres_m_del_caso_presentado_en_la_actividad_de_practica"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/aprendizaje_esperado"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView101"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/recuerda_y_reconoce_el_concepto_de_las_tres_m_media_mediana_moda"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView102"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/halla_las_tres_m_media_mediana_moda_de_una_situaci_n_presentada"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivArrowLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:rotation="180"
                    android:src="@drawable/flecha" />

                <ImageView
                    android:id="@+id/btnMenus"
                    android:layout_width="112dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center"
                    android:src="@drawable/menu" />

                <ImageView
                    android:id="@+id/ivArrowRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/flecha" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>