<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Objetivos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp">

            <ImageView
                android:id="@+id/imageView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/objetivos2" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:cardBackgroundColor="#3AEFCA">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/objetivos"
                    android:textColor="#FFFFFF"
                    android:textSize="21sp" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:text="@string/_1_desarrollar_habilidades_y_destrezas_en_los_estudiantes_apartir_del_analisi_e_interpretacii_n_de_datos_y_gr_ficos_estadisticos"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:text="@string/_2_alcanzar_nuevas_competencias_relacionadas_con_la_comunicaci_n_la_creatividad_y_la_creaci_n_de_nuevos_conocimientos"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:text="@string/_3_emitir_conclusiones_finales_a_trav_s_de_hip_tesis_hechas_del_d_a_a_d_a_a_trav_s_de_los_modelos_estad_sticos"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/btnMenu"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:src="@drawable/menu" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>